# artifacte

./: .gitignore  AGENTS.md  Anchor.toml  CLAUDE.md  README.md  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  skills-lock.json  tailwind.config.ts  test-hack.mjs  test-onchain.mjs  tsconfig.json  tsconfig.tsbuildinfo  vercel.json
app/: globals.css  layout.tsx  not-found.tsx  page.tsx  robots.ts  sitemap.ts
components/: AuctionCard.tsx  BidHistory.tsx  ClawChat.tsx  Footer.tsx  HomeTCGSection.tsx  LoadingSpinner.tsx  MarketplaceListingCard.tsx  Navbar.tsx  NavbarWalletButton.tsx  PriceHistory.tsx  SkeletonCard.tsx  ToastContainer.tsx  VerifiedBadge.tsx  WalletProvider.tsx
data/: allowlist.json  wallet-whitelist.json
docs/: ADMIN_MINT_PROCESS.md  METADATA_STANDARD.md  UPGRADE_INSTRUCTIONS.md
hooks/: useAgentRegistry.ts  useAllowlist.ts  useAuctionProgram.ts  useWalletCapabilities.ts
lib/: admin-dashboard.ts  admin-request.ts  admin.ts  agent-owner-request.ts  agents.ts  allowlist.ts  applications.ts  artifacte-listings.ts  auction-idl.json  auction-idl.ts  auction-program.ts  data.ts  external-purchase-fees.ts  gacha-sounds.ts  helius-asset-image.ts  home-image.ts  home-tcg.ts  list-page-reset.ts  listing-price.ts  m2-buy.ts  magic-eden-buy.ts  marketplace-routing.ts  metadata-reader.ts  my-listings.ts  nft-metadata.ts  portfolio.ts  submissions.ts  tensor-buy-client.ts  tensor-buy-strategy.ts  useM2Buy.ts
programs/auction/: Cargo.toml
programs/auction/src/: lib.rs
scripts/: extend-alt-all.js  init-treasury.mjs
tests/: auction-core.test.ts  (+16 more)
(+194 files in other folders)
