[package]
name = "auction"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = { version = "0.31.1", features = ["token_2022"] }
spl-token = { version = "6", features = ["no-entrypoint"] }
spl-token-2022 = "6"
spl-token-interface = "2.0"
sha2 = "0.10"
