[package]
name = "auction"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.1", features = ["token_2022", "metadata"] }
spl-token-2022 = { version = "*", features = ["no-entrypoint"] }
spl-token = { version = "6", features = ["no-entrypoint"] }
spl-token-interface = "2.0"
spl-transfer-hook-interface = "0.8"
sha2 = "0.10"
